--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "predeploy": "ng build --configuration production --output-path docs --base-href /TheDealershipDeploy/ && touch docs/.nojekyll",
+    "deploy": "npx angular-cli-ghpages --dir=docs"
   },
   "private": true,
   "dependencies": {
